Update schedule with '"'

--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -12,7 +12,7 @@
     - name: "13:00 - 16:00 Ethical Considerations in CSS Research"
     - name: "16:00 - 16:30 Coffee Break"
     - name: "16:30 - 17:30 'Speed Dating'"
-    - name: "18:00 : Guest Speaker TBA
+    - name: "18:00 : Guest Speaker TBA"
     
 - date: 2022-06-21
   name: Building Data Bases in the Digital World
@@ -22,7 +22,7 @@
     - name: "13:00 - 16:00 Group Exercise : Web Scraping"
     - name: "16:00 - 16:30 Coffee Break"
     - name: "16:30 - 17:30 'Speed Dating'"
-    - name: "18:00 : Guest Speaker TBA
+    - name: "18:00 : Guest Speaker TBA"
     
 - date: 2022-06-22
   name: Building Data Bases in the Digital World
@@ -32,7 +32,7 @@
     - name: "13:00 - 16:00 (Even more) Web Scraping"
     - name: "16:00 - 16:30 Coffee Break"
     - name: "16:30 - 17:30 'Speed Dating'"
-    - name: "18:00 : Guest Speaker TBA
+    - name: "18:00 : Guest Speaker TBA"
     
 - date: 2022-06-23
   name: Analyzing those Data
@@ -42,7 +42,7 @@
     - name: "13:00 - 16:00 Group Exercise : NLP"
     - name: "16:00 - 16:30 Coffee Break"
     - name: "16:30 - 17:30 'Speed Dating'"
-    - name: "18:00 : Guest Speaker TBA
+    - name: "18:00 : Guest Speaker TBA"
 
 - date: 2022-06-24
   name: Analyzing those Data
@@ -52,7 +52,7 @@
     - name: "13:00 - 16:00 Group Exercise : NLP"
     - name: "16:00 - 16:30 Coffee Break"
     - name: "16:30 - 17:30 'Speed Dating'"
-    - name: "18:00 : Guest Speaker TBA
+    - name: "18:00 : Guest Speaker TBA"
 
 - date: 2022-06-25
   name: off-day
