update faculty photo

--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -1,6 +1,6 @@
 - name: Emmanuel Olamijuwon
   bio: Emmanuel Olamijuwon is a Research Fellow at the University of St Andrews, UK. His research interest lies at the intersection of technology, sexuality, & population health in L-LMICs.
-  image: 
+  image: /assets/images/eOlamijuwon_shot.jpg
   website: https://e.olamijuwon.com
   
 - name: Fidelia Dake
