update faculty profile

--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -1,5 +1,5 @@
 - name: Emmanuel Olamijuwon
-  bio: Emmanuel Olamijuwon is a Research Fellow at the University of St Andrews, UK. His research interest lies at the intersection of technology, sexuality, & population health in L-LMICs.
+  bio: Emmanuel Olamijuwon is a Research Fellow at the University of St Andrews, UK. His research interest lies at the intersection of technology, sexuality, & population health in low-and-middle-income countries. He completed his PhD at the University of the Witwatersrand, South Africa, where he leveraged data from Facebook and an online survey to illuminate opportunities for advancing sexual health education strategies targetting young African adults in the digital age.
   image: /assets/images/eOlamijuwon_shot.jpg
   website: https://e.olamijuwon.com
   
@@ -9,7 +9,7 @@
   website: https://scholar.google.com/citations?user=uVr7QQQAAAAJ&hl=en
   
 - name: Evans Osabuohien
-  bio: Evans Osabuohien is Professor of Economics, Chair of the Centre for Economic Policy & Development Research (CEPDeR) at Covenant University, Nigeria, and Alexander von Humboldt Visiting Professor, Faculty of Management and Economics at Witten/Herdecke University, Germany.
+  bio: Evans Osabuohien is a Professor of Economics and the current Head of the Department of Economics at Covenant University, Nigeria. He is also an Alexander von Humboldt Visiting Professor, Faculty of Management and Economics at Witten/Herdecke University, Germany. His primary research interest centres around development - agricultural and land economics.
   image: 
   website: https://evansosabuohien.com/
 
