--- a/_data/2022/korea/faculty.yml
+++ b/_data/2022/korea/faculty.yml
@@ -1,14 +1,14 @@
 - name: Lanu Kim
-  image: 
-  bio: Lanu Kim is an assistant professor in the school of humanities and social sciences and a joint professor in the school of computing, Korea Advanced Institute of Science and Technology (KAIST).
+  image: /assets/images/lanu_kim.jpg
+  bio: Lanu Kim is an assistant professor in the school of humanities and social sciences and a joint professor in the school of computing, Korea Advanced Institute of Science and Technology (KAIST). After finishing her sociology PhD at the University of Washington, she was a postdoctoral fellow and data science scholar at Stanford University. Her research broadly contributes to the theoretical understanding of academic knowledge creation by mainly examining the impact of academic search engines, gender inequality in higher education, and the social structure of knowledge construction. To investigate, she utilizes new big data sources, innovative analytical strategies, natural language processing, and advanced statistical methods and work with interdisciplinary research teams.
   website: https://lanukim.github.io/
       
 - name: Wonjae Lee
-  image:
-  bio:
+  image: /assets/images/wonjae_lee.jpg
+  bio: Wonjae Lee is an assistant professor at the Graduate School of Culture Technology (GCST), KAIST. He received his Ph.D. in sociology from the University of Chicago. Prior to joining GSCT, he was a senior researcher in the Department of Sociology at Seoul National University and a research associate at the Booth School of Business, University of Chicago. His research interests include social exchange theory, social network analysis, computational social science, and economic sociology. He has authored and co-authored several publications in PNAS, Harvard Business Review, and more.
   website: 
       
 - name: Jae Yeon Kim 
   image: /assets/images/kim_jae_yeon.jpg
-  bio: Jae Yeon Kim is an Assistant Professor of Data Science at the KDI School of Public Policy. He is also affiliated with the SNF Agora Institute at Johns Hopkins University, where he was a pre- and postdoctoral fellow. He received his PhD in political science from the University of California-Berkeley, where he was a Senior Data Science Fellow at Social Science D-Lab. He studies the intersection of identity, inequality, civic engagement, and political participation, drawing primarily on computational, experimental, and archival methods. He has published widely in leading political science and computational social science journals. He co-developed MapAgora, an R package that helps collect, process, and combine various data on U.S. nonprofits at scale. He also wrote an open-access textbook for computational methods titled "Computational Thinking for Social Scientists." In 2020, Kim co-organized the San Francisco Bay Area Summer Institute in Computational Social Science (BAY-SICSS) with the theme of bridging computational social scientists and practitioners for social good.
+  bio: Jae Yeon Kim is an Assistant Professor of Data Science at the KDI School of Public Policy. He is also affiliated with the SNF Agora Institute at Johns Hopkins University, where he was a pre- and postdoctoral fellow. He received his PhD in political science from the University of California-Berkeley, where he was a Senior Data Science Fellow at Social Science D-Lab. He studies the intersection of identity, inequality, civic engagement, and political participation, drawing primarily on computational, experimental, and archival methods. He has published widely in leading political science and computational social science journals. He co-developed MapAgora, an R package that helps collect, process, and combine various data on U.S. nonprofits at scale. He also wrote an open-access textbook for computational methods titled "Computational Thinking for Social Scientists."
   website: https://jaeyk.github.io/
