--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -1,3 +1,18 @@
+- name: Daegon Cho 
+  image: /assets/images/daegon_cho.jpg
+  bio: Daegon Cho is Associate Professor of IT Management at KAIST College of Business. He received his Ph.D. from Carnegie Mellon in 2014.
+  website: https://dlab.kaist.ac.kr/
+
+- name: Hyunjin Song
+  image: /assets/images/hyunjin_song.jpg
+  bio: Hyunjin Song is an assistant professor at the Department of Communication, Yonsei University, Seoul, South Korea. Previously, he was an assistant professor at Kookmin University, South Korea, and was an Universitätsassistent, post-doc in the Department of Communication at the University of Vienna, working with Univ.-Prof. Dr. Hajo Boomgaarden, Professor for Empirical Social Science Methods with a Focus on Text Analysis. He was also a member of the Vienna Computational Communication Science Lab and remains affiliated with the team. His current research focuses on the role of interpersonal political discussion networks and their effect on political behaviors, including voters' attitudes and electoral engagements. On the other side, he is also working on computational methods and advanced quantitative analysis, including linear conditional modeling, multilevel modeling, and statistical inferences of network data (ERGM / SABM).
+  website: http://www.hyunjinsong.com/
+  
+- name: Jin Young Kim
+  image: /assets/images/jinyoung_kim.jpeg
+  bio: Kim leads Data & Analytics (DnA) team at Naver Search which solves challenging data and analytical problems faced by various search and recommendation services in Naver and Line. The team taps latest outcomes in relevant research areas (IR / RecSys / Data Mining) and contributes back to the community via publications and open source activities. Previously, Kim worked as a data scientist at Snap and a senior applied researcher at Microsoft.  
+  website: https://jykim.github.io/ 
+  
 - name: Eric Giannella
   image: /assets/images/eric_giannella.png
   bio: Eric Giannella is Data Science Director at Code for America, a nonprofit organization that helps government can work for the people, by the people, in the digital age. He is a social scientist turned data scientist. He’s done research in a variety of settings, spanning government, small and large tech companies, and nonprofits. Most recently, he was at the California Department of Justice working to make data more widely available for the public, journalists, and academics. He has published on social support, justice reform, and technology and society. Eric has a Ph.D. in Sociology from UC Berkeley, and an M.S. and B.A. from Stanford.
