--- a/_data/2022/korea/faculty.yml
+++ b/_data/2022/korea/faculty.yml
@@ -6,7 +6,7 @@
 - name: Wonjae Lee
   image: /assets/images/wonjae_lee.jpg
   bio: Wonjae Lee is an assistant professor at the Graduate School of Culture Technology (GCST), KAIST. He received his Ph.D. in sociology from the University of Chicago. Prior to joining GSCT, he was a senior researcher in the Department of Sociology at Seoul National University and a research associate at the Booth School of Business, University of Chicago. His research interests include social exchange theory, social network analysis, computational social science, and economic sociology. He has authored and co-authored several publications in PNAS, Harvard Business Review, and more.
-  website: 
+  website: https://sociology.kaist.ac.kr/
       
 - name: Jae Yeon Kim 
   image: /assets/images/kim_jae_yeon.jpg
