--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -1,6 +1,6 @@
 - name: Daegon Cho 
   image: /assets/images/daegon_cho.jpg
-  bio: Daegon Cho is Associate Professor of IT Management at KAIST College of Business. He received his Ph.D. from Carnegie Mellon in 2014.
+  bio: Daegon Cho is Ewon Associate Professor of IT Management at KAIST College of Business. He received his Ph.D. from Carnegie Mellon in 2014.
   website: https://dlab.kaist.ac.kr/
 
 - name: Hyunjin Song
