--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -1,6 +1,6 @@
 - name: Daegon Cho 
   image: /assets/images/daegon_cho.jpg
-  bio: Daegon Cho is Ewon Associate Professor of IT Management at KAIST College of Business. He received his Ph.D. from Carnegie Mellon in 2014.
+  bio: Daegon Cho is an Ewon Associate Professor of Information Systems at KAIST College of Business. He received a PhD in information systems and management from Carnegie Mellon University’s Heinz College. His research topics are business analytics, economics of IT, and applications of AI/ML to businesses. His research appeared at Information Systems Research, Marketing Science, Production and Operations Management, and Journal of the AIS and other journals.
   website: https://dlab.kaist.ac.kr/
 
 - name: Hyunjin Song
