--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -10,7 +10,7 @@
   
 - name: Jin Young Kim
   image: /assets/images/jinyoung_kim.jpeg
-  bio: Kim leads Data & Analytics (DnA) team at Naver Search which solves challenging data and analytical problems faced by various search and recommendation services in Naver and Line. The team taps latest outcomes in relevant research areas (IR / RecSys / Data Mining) and contributes back to the community via publications and open source activities. Previously, Kim worked as a data scientist at Snap and a senior applied researcher at Microsoft.  
+  bio: Jinyoung leads the Data & Analytics (DnA) team at Naver Search which solves challenging data and analytical problems faced by various search and recommendation services across Naver and Line. The team taps the latest outcomes in relevant research areas (IR / RecSys / Data Mining) and contributes back to the community via publications and open source activities. Previously, Jinyoung worked as a data scientist at Snap and a senior applied researcher at Microsoft.
   website: https://jykim.github.io/ 
   
 - name: Eric Giannella
