--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -1,5 +1,5 @@
 - name: Emmanuel Olamijuwon
-  bio: Emmanuel Olamijuwon is a Research Fellow at the University of St Andrews, UK. His research interest lies at the intersection of technology, sexuality, & population health in low-and-middle-income countries. He completed his PhD at the University of the Witwatersrand, South Africa, where he leveraged data from Facebook and an online survey to illuminate opportunities for advancing sexual health education strategies targetting young African adults in the digital age.
+  bio: Emmanuel Olamijuwon is a Research Fellow at the University of St Andrews, UK. His research interest lies at the intersection of technology, sexuality, & population health in low-and-middle-income countries. His recent projects ([SouthScieX](https://www.southsciex.io/), [AlyssaPhila](https://eolamijuwon.shinyapps.io/AlyssaPhila/), [SHYad.NET](https://shyad.net/)) combine data from traditional data sources (such as the DHS), with digital traces (Facebook and Twitter) and Online surveys to illuminate the complexity of a number of social and health issues such as knowledge inequality, suicide ideation, as well as sexual and reproductive health.
   image: /assets/images/eOlamijuwon_shot.jpg
   website: https://e.olamijuwon.com
   
