--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -5,15 +5,15 @@
   
 - name: Fidelia Dake
   bio: Fidelia Dake is a senior lecturer at the Regional Institute for Population Studies (RIPS) at the University of Ghana. Her research focuses broadly on population health and international development. Her research interests include nutrition and physical activity, obesity and non-communicable diseases, socio-environmental determinants of health, urban health, health statistics, health-financing and population ageing.
-  image: 
+  image: /assets/images/fidelia_sicss.png
   website: https://scholar.google.com/citations?user=uVr7QQQAAAAJ&hl=en
   
 - name: Evans Osabuohien
   bio: Evans Osabuohien is a Professor of Economics and the current Head of the Department of Economics at Covenant University, Nigeria. He is also an Alexander von Humboldt Visiting Professor, Faculty of Management and Economics at Witten/Herdecke University, Germany. His primary research interest centres around development - agricultural and land economics.
-  image: 
+  image: /assets/images/evans_sicss.png
   website: https://evansosabuohien.com/
 
 - name: Obindah Gershon
   bio: Obindah Gershon is a Senior Lecturer in the Department of Economics and Development Studies at Covenant University. He is also the Chair at the Centre for Economic Policy and Development Research (CEPDeR), Covenant University and a visiting professor at Eduardo Mondlane University, Mozambique, St. Jerome University, Cameroon and Emerald Energy Institute, University of Port Harcourt, Nigeria. His research interest covers energy, sustainable development, climate change and the environment.
-  image: 
+  image: /assets/images/gershon_sicss.jfif
   website: https://scholar.google.com/citations?user=QIb136wAAAAJ&hl=lt
