Oxford - Add organizers 2

--- a/_data/2022/oxford/faculty.yml
+++ b/_data/2022/oxford/faculty.yml
@@ -26,4 +26,5 @@
 - name: Maksim Zubok
   bio: 
   image: /assets/images/maksim_zubok.jpg
-  website: https://ruettenauer.github.io  
+  website: https://www.nuffield.ox.ac.uk/people/profiles/maksim-zubok/
+  
