Oxford - Add organizers 3

--- a/_data/2022/oxford/faculty.yml
+++ b/_data/2022/oxford/faculty.yml
@@ -14,12 +14,12 @@
   website: https://crahal.github.io
   
 - name: Francesco Rampazzo
-  bio: Francesco Rampazzo is a Career Development Fellow in Marketing and Consumer Demography at the Saïd Business School and the Leverhulme Centre for Demographic Science at the University of Oxford. He is also a Non-Stipendiary Research Fellow at Nuffield College. He is completing a PhD in Social Statistics and Demography at the University of Southampton and the Max Planck Institute for Demographic Research. His PhD thesis focuses on the use of digital traces combined with traditional data sources to estimate the number of migrants. Francesco is a demographer with a broad range of research interests, which include digital and computational demography with applications in fertility, migration, and survey research.
+  bio: Francesco Rampazzo is a Career Development Fellow in Marketing and Consumer Demography at the Said Business School and the Leverhulme Centre for Demographic Science at the University of Oxford. He is also a Non-Stipendiary Research Fellow at Nuffield College. He is completing a PhD in Social Statistics and Demography at the University of Southampton and the Max Planck Institute for Demographic Research. His PhD thesis focuses on the use of digital traces combined with traditional data sources to estimate the number of migrants. Francesco is a demographer with a broad range of research interests, which include digital and computational demography with applications in fertility, migration, and survey research.
   image: /assets/images/frampazzo.jpg
   website: https://francescorampazzo.com/
 
-- name: Tobias Rüttenauer
-  bio: Tobias Rüttenauer is a Postdoctoral Prize Research Fellow in Sociology at Nuffield College, University of Oxford. His research focuses on environmental inequality, selective migration trajectories, and spatial demography. Furthermore, he is interested in quantitative spatial methods, longitudinal regression models, and the use of geographical information systems to connect different sources of administrative data.
+- name: Tobias RÃ¼ttenauer
+  bio: Tobias RÃ¼ttenauer is a Postdoctoral Prize Research Fellow in Sociology at Nuffield College, University of Oxford. His research focuses on environmental inequality, selective migration trajectories, and spatial demography. Furthermore, he is interested in quantitative spatial methods, longitudinal regression models, and the use of geographical information systems to connect different sources of administrative data.
   image: /assets/images/RuttenauerTobias.png
   website: https://ruettenauer.github.io
   
