Oxford - correct picture link

--- a/_data/2022/oxford/faculty.yml
+++ b/_data/2022/oxford/faculty.yml
@@ -1,6 +1,6 @@
 - name: Evelina Akimova
   bio: 
-  image: /assets/images/eva_akimova.jpeg
+  image: /assets/images/eva_akimova.jpg
   website: https://www.sociology.ox.ac.uk/people/evelina-akimova
 
 - name: Ridhi Kashyap
