--- a/_data/2022/ndsu/faculty.yml
+++ b/_data/2022/ndsu/faculty.yml
@@ -1,1 +1,6 @@
 - name: 
+- name: Shuning Lu
+  image: /assets/images/Shuning_Lu.jpeg
+  bio: "Shuning Lu is an Assistant Professor in the Department of Communication, North Dakota State University. Her research interests revolve around news use, media effects, and political communication. Her recent projects explore social media news engagement, online incivility, and civic engagement with online experiments and large-scale surveys."
+  website: https://www.ndsu.edu/communication/faculty/shuning_lu/
+  
