--- a/_data/2022/singapore/faculty.yml
+++ b/_data/2022/singapore/faculty.yml
@@ -6,5 +6,5 @@
 
 - name: Jack Linchuan Qiu, Ph.D.
   image: /assets/images/Jack_2022.jpg
-  bio: "Jack Linchuan Qiu is Professor and Research Director at the Department of Communications and New Media"
+  bio: "Jack Linchuan Qiu is Professor and Research Director at the Department of Communications and New Media and a principal investigator at the Centre for Trusted Internet and Community at NUS. His research interests include digital labor, platform economy, and case studies, especially in the Asia-Pacific."
 
