--- a/_data/2022/ndsu/location.yml
+++ b/_data/2022/ndsu/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/ndsu.jpg
+image: /assets/images/ndsu1.jpeg
 title: NDSU
 subtitle: North Dakota State University
 description: "June 13 to June 24, 2022"
