--- a/_data/2022/ndsu/location.yml
+++ b/_data/2022/ndsu/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/ndsu1.jpeg
-title: NDSU
-subtitle: North Dakota State University
+title: North Dakota State University
+subtitle: Fargo, North Dakota
 description: "June 13 to June 24, 2022"
 link: ndsu
 year: 2022
