--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -17,3 +17,8 @@
   image: /assets/images/eric_giannella.png
   bio: Eric Giannella is Data Science Director at Code for America, a nonprofit organization that helps government can work for the people, by the people, in the digital age. He is a social scientist turned data scientist. He’s done research in a variety of settings, spanning government, small and large tech companies, and nonprofits. Most recently, he was at the California Department of Justice working to make data more widely available for the public, journalists, and academics. He has published on social support, justice reform, and technology and society. Eric has a Ph.D. in Sociology from UC Berkeley, and an M.S. and B.A. from Stanford.
   website: https://www.codeforamerica.org/people/eric-giannella/
+  
+- name: Suhem Parack 
+  image: /assets/images/suhem_parack.jpg
+  bio: Suhem Parack is a Staff Developer Advocate at Twitter. He helps students and academic researchers with their research using the Twitter API. Before joining Twitter, he was a Solutions Architect at Amazon.
+  website: https://dev.to/suhemparack
