--- a/_data/2022/bologna/location.yml
+++ b/_data/2022/bologna/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/bologna.jpg
 title: Bologna
-subtitle: Bologna University
-description: "June 19 to July 2, 2022"
+subtitle: University of Bologna
+description: "20 June to 1 July 2022"
 link: bologna
 year: 2022
