--- a/_data/2022/bologna/hero.yml
+++ b/_data/2022/bologna/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 19 to July 2, 2022 | Bologna University"
+header_2: "20 June to 1 July 2022 | University of Bologna"
 location: "SICSS-Bologna"
