Update location.yml of SICSS-Tokyo

--- a/_data/2022/tokyo/location.yml
+++ b/_data/2022/tokyo/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/tokyo.jpg
+image: /assets/images/tokyo2.jpg
 title: Tokyo
 subtitle: Virtual Event
 description: "August 1 to August 5, 2022"
