--- a/_data/2022/amu/faculty.yml
+++ b/_data/2022/amu/faculty.yml
@@ -1,10 +1,13 @@
 - name: Łukasz Szoszkiewicz, PhD
+  image: /assets/images/lukasz.png
   bio: Łukasz Szoszkiewicz is an Assistant Professor at Adam Mickiewicz University, Data Coordinator within the UN Global Study on Children Deprived of Liberty. A former participant of SICSS-Law 2021 (Maastricht University). His research interests include international protection of human rights and data science. Knows basics of R, Python and has advanced knowledge of SPSS. 
 
 - name: Igor Gontarz
+  image: /assets/images/igor.png
   bio: Igor Gontarz is a PhD student at the Doctoral School of Social Sciences at the Adam Mickiewicz University in Poznań, trainee attorney-at-law, town hall associate. His scientific research focuses on the right to information and the automation of public administration. Member of research projects devoted to digitalisation of judiciary, algorithms, and criminal procedure.
   
 - name: Wojciech Biernacki
+  image: /assets/images/wojtek.png
   bio: Wojciech Biernacki is an extramural PhD researcher and cooperator at the European Law Chair at the Faculty of Law and Administration at the Adam Mickiewicz University in Poznań, and an attorney’s assistant. In his research, he focuses on intellectual property rights, mostly copyright, and issues related to data processing and data ownership. He is familiar with the basics of Python, PHP, and MySQL databases.
   
 - name: Jędrzej Wydra
