--- a/_data/2022/covenant-university/faculty.yml
+++ b/_data/2022/covenant-university/faculty.yml
@@ -9,7 +9,7 @@
   website: https://scholar.google.com/citations?user=uVr7QQQAAAAJ&hl=en
   
 - name: Evans Osabuohien
-  bio: Evans Osabuohien is a Professor of Economics and the current Head of the Department of Economics at Covenant University, Nigeria. He is also an Alexander von Humboldt Visiting Professor, Faculty of Management and Economics at Witten/Herdecke University, Germany. His primary research interest centres around development - agricultural and land economics.
+  bio: Evans Osabuohien is a Professor of Economics and the Head of the Department of Economics & Development Studies at Covenant University, Nigeria. He a fellow of the  Alexander von Humboldt Foundation(AvH) and Swedish Institute. He coordinates the Research Linkage Programme between Witten/Herdecke University, Germany and Covenant University, Nigeria with funding from AvH. His primary research interest centres around development, institutional economics, and agricultural/land economics.
   image: /assets/images/evans_sicss.png
   website: https://evansosabuohien.com/
 
