--- a/_data/2022/amu/location.yml
+++ b/_data/2022/amu/location.yml
@@ -1,6 +1,6 @@
-image: /assets/images/poznan.jpg
+image: /assets/images/amu-website.JPG
 title: AMU
 subtitle: Poznan, Poland
-description: "June 13 to June 24, 2022"
+description: "June 20 to July 1, 2022"
 link: amu
 year: 2022
