--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -1,1 +1,50 @@
-- name:
+- name: Eliott Ash
+  image: 
+  bio:
+  website: 
+  
+- name: Marie Bergström
+  image: 
+  bio: Marie Bergström is a Permanent Researcher at the French National Institute for Demography. Her work deals with online dating. 
+  website: 
+  
+- name: Julia Cagé
+  image: 
+  bio: Julia Cagé is an associate professor of Economics at Sciences Po Paris. Her research deals with political economy, industrial organization and economic history. She is particularly interested in media economics, political participation and political attitudes.
+  website: https://juliacage.com
+  
+- name: David Garcia
+  image: 
+  bio: David Garcia is full professor for Computational Behavioral and Social Sciences at TU Graz. His research analyzes human behavior through digital traces and deals with topics such as emotions, polarization, inequality, and privacy. 
+  website: https://dgarcia.eu
+
+- name: Gloria Genaro
+  image: 
+  bio: Glora Genaro is a postdoctoral student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
+  website: http://gloriagennaro.rbind.io
+   
+- name: Marc Keuschnigg
+  image: 
+  bio: Marc Keuschnigg is Professor of Sociology at Leipzig University and Associate Professor at The Institute for Analytical Sociology at Linköping University. His research deals with cultural dynamics, social norms, and spatial inequality. 
+  website: https://www.keuschnigg.org
+  
+- name: Gianluca Manzo
+  image: 
+  bio: Gianluca Manzo is professor of sociology at Sorbonne University. His research is of theoretical and empirical nature. The former revolves around meta-theoretical reflections on sociological theorization, the latter with a broad range of topics such as educational inequalities, relative deprivation, status hierarchies, and, more recently, innovation diffusion and migration dynamics.
+  website: https://www.gemass.fr/manzo/
+  
+- name: Ivaylo Petev
+  image: 
+  bio: Ivaylo Petev is CNRS Research Fellow at the Center for Research in Economics and Statistics (CREST) where he heads the department for Quantiative Sociology. His research deals with inequalities in consumption and lifestyles, environmental practices and discrimination from historical and comparative perspectives.
+  website: https://www.ipetev.org
+  
+- name: Liva Ralaivola
+  image: 
+  bio: Liva Ralaivola is the head of the Criteo Research Lab. There, they develop cutting-edge machine learning tools for online marketing. Formerly, he was a full professor in Computer Science at Aix-Marseille Université (currently on leave). 
+  website: https://pageperso.lis-lab.fr/~liva.ralaivola/doku.php
+  
+- name: Paola Tubaro
+  image: 
+  bio: 
+  website: 
+ 
