update Eric's profile

--- a/_data/2022/korea/speakers.yml
+++ b/_data/2022/korea/speakers.yml
@@ -15,7 +15,7 @@
   
 - name: Eric Giannella
   image: /assets/images/eric_giannella.png
-  bio: Eric Giannella is Data Science Director at Code for America, a nonprofit organization that helps government can work for the people, by the people, in the digital age. He is a social scientist turned data scientist. He’s done research in a variety of settings, spanning government, small and large tech companies, and nonprofits. Most recently, he was at the California Department of Justice working to make data more widely available for the public, journalists, and academics. He has published on social support, justice reform, and technology and society. Eric has a Ph.D. in Sociology from UC Berkeley, and an M.S. and B.A. from Stanford.
+  bio: Eric Giannella is Director of Data Science at Code for America, a civic tech non-profit that makes government services easier to access. Eric has done research in a variety of settings, spanning government, small and large tech companies, and nonprofits. Prior to Code for America, he was at the California Department of Justice working to make data more widely available for the public, journalists, and academics. He has published on social support, justice reform, and technology and society. Eric has a Ph.D. in Sociology from UC Berkeley, and an M.S. and B.A. from Stanford.
   website: https://www.codeforamerica.org/people/eric-giannella/
   
 - name: Suhem Parack 
