--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -1,11 +1,8 @@
 - date: 2022-06-20
   name: Introduction and Logistics
   events:
-    - name: "09:00 - 12:00 What are Computational Social Sciences?"
-    - name: "12:00 - 13:00 Lunch Break"
-    - name: "13:30 - 16:00 Ethical Considerations in CSS Research"
-    - name: "16:00 - 16:30 Coffee Break"
-    - name: "16:30 - 17:30 'Speed Dating'"
+    - name: "13:00 - 14:00 Arrival"
+    - name: "14:00 - 17:00 What are Computational Social Sciences?"
     - name: "18:00 : Welcome Dinner"
     
 - date: 2022-06-21
