--- a/_data/2022/amu/faculty.yml
+++ b/_data/2022/amu/faculty.yml
@@ -1,4 +1,4 @@
-- name: Łukasz Szoszkiewicz, PhD
+- name: Lukasz Szoszkiewicz, PhD
   image: /assets/images/lukasz.png
   bio: Łukasz Szoszkiewicz is an Assistant Professor at Adam Mickiewicz University, Data Coordinator within the UN Global Study on Children Deprived of Liberty. A former participant of SICSS-Law 2021 (Maastricht University). His research interests include international protection of human rights and data science. Knows basics of R, Python and has advanced knowledge of SPSS. 
 
