--- a/_data/2022/roma-tor-vergata/faculty.yml
+++ b/_data/2022/roma-tor-vergata/faculty.yml
@@ -1,1 +1,4 @@
-- name: 
+- name: Gustavo Piga 
+bio: Gustavo Piga, Ph. D. in Economics at Columbia University, is Full Professor of Economics at the University of Rome Tor Vergata, where he chairs the International Master in Public Procurement Management and the Bachelor degree in English in Global Governance. He has chaired the Italian Procurement Agency for Goods and Services, Consip Ltd., between 2002 and 2005. He is the author of the controversial 2001 report on “Derivatives in Public Debt Management”. His fields of expertise are public procurement, macroeconomics and public debt management. He is the editor of several books, among which the Handbook of Procurement, Cambridge University Press, with Nicola Dimitri and Giancarlo Spagnolo and Revisiting Keynes: Economic Possibilities for our Grandchildren, MIT Press, with Lorenzo Pecchi. He is the author of the recent book “L’interregno” by Hoepli on the European crisis. He is also the co-editor of the European Journal of Public Procurement Markets and member of the Scientific Committee of the Italian Parliamentary Budget Office.
+website: https://gustavopiga.eu/
+
