--- a/_data/2022/india/location.yml
+++ b/_data/2022/india/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/india.jpg
+image: /assets/images/iiith.jpeg
 title: India
 subtitle: IIIT Hyderabad
 description: "July 11 to July 25, 2022"
