--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -74,7 +74,7 @@
 - date: 2022-06-30
   name: Experiments
   events:
-    - name: "09:30 - 12:00 Lecture"
+    - name: "09:30 - 12:00 Lecture (Guillaume Hollard)"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 17:00 Group Projects – take breaks as you wish"
     - name: "17:00 - 18:30 : Marc Keuschnigg"
