--- a/_data/2022/jias/organisers.yml
+++ b/_data/2022/jias/organisers.yml
@@ -1,1 +1,12 @@
 
+- name: malebo sephodi
+  image: /assets/images/jias_malebo.jpg
+  bio: malebo sephodi is a South African Feminist writer and scholar. She is a doctoral candidate in the Information Systems Department at the University of Cape Town and a 2020 writing fellow at the Johannesburg Institute for Advanced Study. She is interested in the intersections of society and digital technology. Malebo's interdisciplinary work focuses on Accessible Knowledge Production and Dissemination, African Feminism, Decolonisation, Critical Theory, ICT4D, Artificial Intelligence and Digital Technology Education.
+
+- name: Zimasa Ndamase
+  image: /assets/images/jias_zimasa.jpg
+  bio: Zimasa is an IS Professional with 14 years of work experience. She has expertise in software development, Business Intelligence, Data Analytics, Data Management and Data Governance. Zimasa is an Information Systems PhD Candidate at the University of Cape Town. Her research focuses on the challenges of implementing Data Governance Programmes in organizations. Her other research interests are in ICT4D and e-Government.
+
+  - name: Siphesihle Sithungu
+  image: /assets/images/jias_siphesihle.jpg
+  bio: Siphesihle Sithungu is a Computer Science lecturer and doctoral candidate at the University of Johannesburg, South Africa. He is also an author and has published articles in international conferences and journals. His research interests are Intelligent Agents, Machine Learning and Nature Inspired Artificiall Intelligence.
