--- a/_data/2022/amu/teaching_assistants.yml
+++ b/_data/2022/amu/teaching_assistants.yml
@@ -1,5 +1,5 @@
 - name: Malgorzata Jurczak
-  bio: Malgorzata Jurczak is a master student at the Faculty of Mathematics and Computer Science (of AMU) majoring in Statistics & Data Analysis. She holds a Bachelor’s degree in Mathematics (speciality: Data Analysis). She is interested in the area of machine learning, currently she is preparing her master’s thesis about Deep Stacking Networks. Professionally she is connected with actuary. Her skills include R programming (more than 3 years) as well as the basics of SQL.
+  bio: Malgorzata Jurczak is a master student at the Faculty of Mathematics and Computer Science (of AMU) majoring in Statistics & Data Analysis. She holds a Bachelor’s degree in Mathematics (speciality in Data Analysis). She is interested in the area of machine learning, currently she is preparing her master’s thesis about Deep Stacking Networks. Professionally she is connected with actuary. Her skills include R programming (more than 3 years) as well as the basics of SQL.
 
 - name: Dominika Kornobis
   image: /assets/images/dominika.jpg
