--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -40,7 +40,7 @@
   
 - name: Ivaylo Petev
   image: /assets/images/ivaylo_petev.jpg
-  bio: Ivaylo Petev is CNRS Research Fellow at the Center for Research in Economics and Statistics (CREST) where he heads the department for Quantiative Sociology. His research deals with inequalities in consumption and lifestyles, environmental practices and discrimination from historical and comparative perspectives.
+  bio: Ivaylo Petev is CNRS Research Fellow at the Center for Research in Economics and Statistics (CREST) where he heads the department for Sociology. His research deals with inequalities in consumption and lifestyles, environmental practices and discrimination from historical and comparative perspectives.
   website: https://www.ipetev.org
   
 - name: Liva Ralaivola
