--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -1,12 +1,12 @@
 - date: 2022-06-20
-  name: Introduction and Logistics
+  name: Introduction
   events:
     - name: "09:30 - 12:00 : What are Computational Social Sciences?"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 14:30 Ethics in Scraping"
     - name: "14:45 - 16:30 Gig workers and women in AI (Paola Tubaro)"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 : Matt Salganik (online)"
+    - name: "17:00 - 18:30 : Matt Salganik"
     - name: "18:30 - 21:00 : Welcome dinner"
     
 - date: 2022-06-21
@@ -58,7 +58,7 @@
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Projects"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 : David Garcia (online)"
+    - name: "17:00 - 18:30 : David Garcia"
     
 - date: 2022-06-28
   name: TBA
