--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -1,7 +1,7 @@
 - date: 2022-06-20
   name: Introduction
   events:
-    - name: "09:30 - 12:00 : What are Computational Social Sciences?"
+    - name: "09:30 - 12:00 What are Computational Social Sciences?"
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 14:30 Ethics in Scraping"
     - name: "14:45 - 16:30 Gig workers and women in AI (Paola Tubaro)"
