--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -7,7 +7,7 @@
     - name: "14:45 - 16:30 Gig workers and women in AI (Paola Tubaro)"
     - name: "16:30 - 17:00 Coffee Break"
     - name: "17:00 - 18:30 : Matt Salganik"
-    - name: "18:30 - 21:00 : Welcome dinner"
+    - name: "18:30 - 21:00 Welcome dinner"
     
 - date: 2022-06-21
   name: Data Collection
