--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -5,27 +5,27 @@
   
 - name: Marie Bergström
   image: /assets/images/marie_bergström.jpg
-  bio: Marie Bergström is a Permanent Researcher at the French National Institute for Demography. Her work deals with online dating. 
+  bio: Marie Bergström is a Permanent Researcher at the French National Institute for Demography. Her work deals with online dating which she investigates using digital data. 
   website: https://www.ined.fr/en/research/researchers/Bergström+Marie
   
 - name: Julia Cagé
   image: /assets/images/julia_cage.jpg
-  bio: Julia Cagé is an associate professor of Economics at Sciences Po Paris. Her research deals with political economy, industrial organization and economic history. She is particularly interested in media economics, political participation and political attitudes.
+  bio: Julia Cagé is an Associate Professor of Economics at Sciences Po Paris. Her research deals with political economy, industrial organization and economic history. She is particularly interested in media economics, political participation and political attitudes.
   website: https://juliacage.com
   
 - name: David Garcia
   image: /assets/images/david_garcia.jpg
-  bio: David Garcia is full professor for Computational Behavioral and Social Sciences at TU Graz. His research analyzes human behavior through digital traces and deals with topics such as emotions, polarization, inequality, and privacy. 
+  bio: David Garcia is Full Professor for Computational Behavioral and Social Sciences at TU Graz. His research analyzes human behavior through digital traces and deals with topics such as emotions, polarization, inequality, and privacy. 
   website: https://dgarcia.eu
 
 - name: Gloria Genaro
   image: /assets/images/gloria_genaro.jpg
-  bio: Glora Genaro is a postdoctoral student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
+  bio: Glora Genaro is a Postdoctoral Student at the Immigration Policy Lab at ETH Zurich. Her research focuses on current challenges of democratic societies in Western Europe and in the US where she studies the demand and supply of populism, electoral responses to immigration, and emotions in politics. 
   website: http://gloriagennaro.rbind.io
   
 - name: Guillaume Hollard
   image: /assets/images/guillaume_hollard.jpg
-  bio: Guillaume Hollard is a Senior Researcher at CNRS and Professor of Economics at École Polytechnique. 
+  bio: Guillaume Hollard is a Senior Researcher at CNRS, Professor of Economics at École Polytechnique, where he also serves as the Vice President of the Economics department.  
   website: https://sites.google.com/site/webpagehollard/
    
 - name: Marc Keuschnigg
@@ -35,7 +35,7 @@
   
 - name: Gianluca Manzo
   image: /assets/images/gianluca_manzo.jpg
-  bio: Gianluca Manzo is professor of sociology at Sorbonne University. His research is of theoretical and empirical nature. The former revolves around meta-theoretical reflections on sociological theorization, the latter with a broad range of topics such as educational inequalities, relative deprivation, status hierarchies, and, more recently, innovation diffusion and migration dynamics.
+  bio: Gianluca Manzo is Professor of Sociology at Sorbonne University. His research is of theoretical and empirical nature. The former revolves around meta-theoretical reflections on sociological theorization, the latter with a broad range of topics such as educational inequalities, relative deprivation, status hierarchies, and, more recently, innovation diffusion and migration dynamics.
   website: https://www.gemass.fr/manzo/
   
 - name: Ivaylo Petev
