--- a/_data/2022/paris/speakers.yml
+++ b/_data/2022/paris/speakers.yml
@@ -44,7 +44,7 @@
   website: https://www.ipetev.org
   
 - name: Liva Ralaivola
-  image: /assets/images/liva_ralaivola.jpg
+  image: /assets/images/liva_ralaivola.png
   bio: Liva Ralaivola is the head of the Criteo Research Lab. There, they develop cutting-edge machine learning tools for online marketing. Formerly, he was a full professor in Computer Science at Aix-Marseille Université (currently on leave). 
   website: https://pageperso.lis-lab.fr/~liva.ralaivola/doku.php
   
