Update faculty of SICSS-Tokyo

--- a/_data/2022/tokyo/faculty.yml
+++ b/_data/2022/tokyo/faculty.yml
@@ -6,5 +6,5 @@
 - name: Makiko Nakamuro
   image: /assets/images/MakikoNakamuro.jpg
   bio: "Makiko Nakamuro is Professor of Policy Management at Keio University. She is an economist who has focused on economics of education. Makiko graduated from Keio University, Faculty of Environmental Information (SFC) in 1998, and then completed Masters and Ph.D. programs at Columbia University in the city of New York (in 2005 and 2010, respectively). She used to work for the Bank of Japan and the World Bank where she was given considerable hand-on training on economic research. She also worked for Tohoku University as an Assistant Professor, particularly working on the project of international migration."
-  website: https://vu.sfc.keio.ac.jp/faculty_profile/cgi/f_profile_e.cgi?id=adc1d5b0312a9907
+  website: https://edueco.sfc.keio.ac.jp/index.html
 
