--- a/_data/2022/lisbon/teaching_assistants.yml
+++ b/_data/2022/lisbon/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Alessandro Gambetti 
+  bio: "Alessandro Gambetti is currently a Research and Teaching Assistant of Data Science at the Nova School of Business and Economics (Nova SBE), Lisbon, Portugal. He recently received an MSc in Finance from Nova SBE, majoring in Data and Business Analytics, and he holds a BSc in Economics & Finance from the Alma Mater Università di Bologna, Bologna, Italy. His research interests span from applied data science in both social and business sciences in which data may be considered as a driving factor in decision-making. Aside from research, he is currently involved in tutoring MSc students in data-based subjects with the goal of easing the overall learning process."
+  image: /assets/images/AlessandroGambetti.jpg
+  website: https://www.linkedin.com/in/a-gambetti/
