--- a/_data/2022/sydney/location.yml
+++ b/_data/2022/sydney/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/sydney.jpg
+image: /assets/images/SydneyUni.jpg
 title: Sydney
 subtitle: University of Sydney
 description: "June 14 to June 25, 2022"
