--- a/_data/2022/paris/location.yml
+++ b/_data/2022/paris/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/paris.jpg
 title: Paris
-subtitle: École Polytechnique
+subtitle: Institut Polytechnique de Paris
 description: "June 20 to July 1, 2022"
 link: paris
 year: 2022
