--- a/_data/2022/jogja/speakers.yml
+++ b/_data/2022/jogja/speakers.yml
@@ -1,24 +1,24 @@
-- name: Jason J. Jones 
+name: Jason J. Jones 
 image: assets/images/JasonJones.jpg
 bio: “Jason is an Associate Professor at Stony Brook University, Department of Sociology with a doctorate in Psychology, post-doctorate work in Political Science and a Bachelor's degree in Computer Science. He tries to embody the best of what it means to be interdisciplinary in academia.  In my work, he takes advantage of massive datasets to re-examine what we think we know about human behavior.  For example, he had collaborated with Facebook to conduct experiments regarding social norms around voting - each experiment generating data from millions of participants.  In another collaboration, he and his colleagues re-imagine and redefine Granovetter's "strength of weak ties" hypothesis by taking into account the work histories and social networks of millions of people around the world.  Broadly, his research interests involve the application of computational social science to predict political, health and other social behaviors.”
 website: https://jasonjones.ninja/
 
-- name: Ismail Fahmi 
+name: Ismail Fahmi 
 image: assets/images/IsmailFahmi.jpg
 bio: “Ismail is an information scientist with experiences in developing digital library software, building digital library community, semantic web application, automatic terminology extraction from text, and building ontologies. He is also the founder of Drone Emprit, a software for social media monitoring and analytics, and Media Kernels Indonesia, a company that focuses on harnessing Natural Language Processing technologies to provide innovative solutions in text mining and insight discovery for knowledge-based institutions.”
 website: https://scholar.google.com/citations?user=qeW_ujUAAAAJ&hl=en
 
-- name: Arie Wahyu Wijayanto
+name: Arie Wahyu Wijayanto
 image: assets/images/ArieWahyu.jpg
 bio: “Arie is an Assistant Professor at Politeknik Statistika STIS Indonesia. He earned his Ph.D. from the Department of Computer Science, School of Computing, Tokyo Institute of Technology where he was a member of Murata Laboratory, which specializes in research on artificial intelligence, especially network science, machine learning, and web mining. He has been investigating some topics related to massive scale graph analytics and graph protection strategies involving fundamental linear algebra, reinforcement learning, and deep learning.”
 website: https://ariewahyu.github.io/ 
 
-- name: Dhomas Hatta Fudholi
+name: Dhomas Hatta Fudholi
 image: assets/images/DhomasHatta.jpg
 bio: “Dhomas is an Assistant Professor at the Department of Informatics, Universitas Islam Indonesia where he is serving as the Secretary of the Undergraduate Program and Head of Center of Data Science. He earned his Ph.D. in Computer Science and IT in 2016 from La Trobe University, Melbourne, Australia with a full postgraduate scholarship from La Trobe University. Previously, he earned his Master’s degree from King Mongkut’s Institute of Technology Ladkrabang, Thailand, and his Bachelor’s degree from Universitas Gadjah Mada, Indonesia in 2008. His research interests are mainly related to ontology, data science, natural language processing, deep learning, and big data. He explores data science and deep learning methods to support knowledge base development and various useful applications.”
 website: https://informatics.uii.ac.id/profil/dosen_if/dhomas-hatta-fudholi/
 
-- name: Nurvirta Monarizqa
+name: Nurvirta Monarizqa
 image: assets/images/NurvirtaMonarizqa.jpg
 bio: “Mona is a Data Scientist, working for Microsoft and currently residing in Bellevue, across the lake from Seattle. She is an alumna of Urban Science + Progress at New York University and Information Technology at Gadjah Mada University. She loves playing with data and visualization, especially when it comes to data for greater good. Besides data analytics, sometimes she does web design and digital illustrations and she likes to share her work on Medium.”
 website: https://nmonarizqa.github.io/
