--- a/_data/2022/amu-law/faculty.yml
+++ b/_data/2022/amu-law/faculty.yml
@@ -7,7 +7,7 @@
   bio: Igor Gontarz is a PhD student at the Doctoral School of Social Sciences at the Adam Mickiewicz University in Poznań, trainee attorney-at-law, town hall associate. His scientific research focuses on the right to information and the automation of public administration. Member of research projects devoted to digitalisation of judiciary, algorithms, and criminal procedure.
   
 - name: Wojciech Biernacki
-  image: /assets/images/wojtek.png
+  image: /assets/images/wojtek.jpg
   bio: Wojciech Biernacki is an extramural PhD researcher and cooperator at the European Law Chair at the Faculty of Law and Administration at the Adam Mickiewicz University in Poznań, and an attorney’s assistant. In his research, he focuses on intellectual property rights, mostly copyright, and issues related to data processing and data ownership. He is familiar with the basics of Python, PHP, and MySQL databases.
   
 - name: Jedrzej Wydra
