--- a/_data/2022/jias/location.yml
+++ b/_data/2022/jias/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/jias_johannesburg.jpg
 title: JIAS
-subtitle: University of Johannesburg
-description: "June 19 to June 29, 2022"
+subtitle: Virtual and Johannesburg Institute for Advanced Study
+description: "June 20 to July 8, 2022"
 link: jias
 year: 2022
